Внесены правки в соответствии с замечаниями 2